Refactor common benchmarking annotations