@@ -29,12 +29,7 @@ import org.openjdk.jmh.infra.Blackhole;
 
 import org.netlib.util.doubleW;
 
-import java.util.concurrent.TimeUnit;
-
-@BenchmarkMode(Mode.Throughput)
-@OutputTimeUnit(TimeUnit.SECONDS)
 @State(Scope.Thread)
-@Fork(value = 1, jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
 public class DrotgBenchmark extends BLASBenchmark {
 
     public doubleW sa, saclone;
